--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,8 @@
 RewriteEngine On
 php_flag  display_errors        on
 php_value error_reporting       2039
+RewriteCond %{HTTP_HOST} ^natl-cursillo.com/pen-tall/$ [NC]
+RewriteCond %{HTTP_HOST} ^cursillo.com/pen-tall/$ [NC]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
